--- a/src/main/g8/backend/src/main/resources/i18n/auth_pl.properties
+++ b/src/main/g8/backend/src/main/resources/i18n/auth_pl.properties
@@ -5,3 +5,4 @@ auth.submit.label=Zaloguj si\u0119
 auth.user_not_found=Nazwa u\u017cytkownika lub has\u0142o jest nieprawid\u0142owe.
 auth.username.label=Nazwa u\u017Cytkownika
 auth.username.placeholder=Wpisz swoj\u0105 nazw\u0119 u\u017cytkownika...
+auth.random_permissions=Uprawnienia u\u017cytkownika losowane s\u0105 przy ka\u017cdym logowaniu. Mo\u017cesz zmieni\u0107 to zachowanie w klasie AuthService.
